--- a/project.config.json
+++ b/project.config.json
@@ -2,15 +2,17 @@
 	"description": "项目配置文件。",
 	"setting": {
 		"urlCheck": true,
-		"es6": false,
+		"es6": true,
 		"postcss": true,
 		"minified": true,
-		"newFeature": true
+		"newFeature": true,
+		"autoAudits": false
 	},
 	"miniprogramRoot": "dist/wx/",
 	"compileType": "miniprogram",
 	"appid": "wx17e90fed3e355d0b",
-	"projectname": "timemanag",
+	"projectname": "shouzhang",
+	"libVersion": "2.6.6",
 	"condition": {
 		"search": {
 			"current": -1,
